css/main.css
@charset "UTF-8";

/* import Arvo from Google Fonts */
@import url(https://fonts.googleapis.com/css?family=Arvo:400,700,400italic);

/* MeyerWeb Reset */
html, body {
    height: 100%;
}
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font: inherit;
	vertical-align: baseline;
}
body {
	padding: 10px 50px 0 0;
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 14px;
	color: #232323;
	background-color: #FBFAF7;
	margin: 0;
	line-height: 1.8em;
	-webkit-font-smoothing: antialiased;
}

/************* Wrapper *********************************/
.wrapper {
	width: 960px;
}

/******* Main Div ******************************************************/

#main {
	border-top: 0;
	width: 650px;
	float: right;
	padding-bottom: 50px;
	margin-top: 0;
}
/*************** Master Header ********************/
.masterHeader {
	max-width:170px;
	background-color: #171717;
	float: left;
	position: fixed;
	border: 1px solid #000;
	border-top-right-radius: 4px;
	border-bottom-right-radius: 4px;
	padding: 34px 40px 22px 50px;
	margin: 30px 25px 0 0;
	-webkit-font-smoothing: antialiased;
}
.masterHeader h1, 
.masterHeader p, 
.masterHeader a {
	color: #FFFFFF;
}
.masterHeader > h1 > a {
	text-decoration:none;
}
.masterHeader > p {
	font-family: Arvo, Monaco, serif;
	font-size: 12px;
	line-height:15px;
}
.masterHeader h1 {
	font-family: Arvo, sans-serif;
	font-size: 30px;
	font-weight: 300;
	line-height: 1.3em;
	border-bottom: 0;
	margin-top: 0;
	border-top: 0;
}

/* Master Header: the black heading with nav buttons and site title */
.masterHeader ul {
	list-style: none;
	padding: 0;
}
.masterHeader li {
	list-style-type: none;
	padding-left: 0;
}
.navButton {
	font-weight: normal;	
	line-height: 1em;
	
	display: block;
	width: 152px;
	height: 15px;
	padding: 6px 6px 6px 7px;
	margin-bottom: 12px;
	
	background: #AF0011;
	background: linear-gradient(top, #AF0011 0%,#820011 100%);
	background: -moz-linear-gradient(top, #AF0011 0%, #820011 100%);
	background: -webkit-gradient(linear, top, bottom, color-stop(0%,#AF0011), color-stop(100%,#820011));
	background: -webkit-linear-gradient(top, #AF0011 0%,#820011 100%);
	background: -o-linear-gradient(top, #AF0011 0%,#820011 100%);
	background: -ms-linear-gradient(top, #AF0011 0%,#820011 100%);
	
	border-radius: 4px;
	border: 1px solid #0D0D0D;
}
.navButton:hover {
	background: #C3001D;
	background: linear-gradient(top, #C3001D 0%,#950119 100%);
	text-decoration: none;
}

/************ Footer **********************************/
footer {
	width: 170px;
	float: left;
	position: fixed;
	bottom: 10px;
	padding-left: 50px;
}
footer p {
	font-size: 8pt;
	margin: 0;
}
footer p.tiny {
	font-size: 6pt;
}

.widgettitle {
	display: none;
}

footer aside ul > li {
	list-style-type: none;
	
}
footer aside ul > li > a {
	list-style-type: none;
	color: #000099;
}

/***************** Headers *****************************/
h1, h2, h3, h4, h5, h6 {
	color: #232323;
	margin: 24px 0 10px;
}
h1, h2, h3 {
	font-family: Arvo, Monaco, serif;
	line-height: 1.3;
	font-weight: normal;
}
h1, h2, h3 {
	display: block;
	border-bottom: 1px solid #CCCCCC;
	padding-bottom: 5px;
}
h1 {
	font-size: 24px;
}
h2 {
	font-size: 18px;
}
h3 {
	font-size: 16px;
}
h4, h5, h6 {
	font-family: Arvo, Monaco, serif;
	font-weight: 700;
	font-size:14px;
}
/*********** Text Elements **************/
p, ul, ol, table, dl {
	margin: 0 0 14px;
}
a {
	color: #000099;
	font-weight: 200;
	text-decoration: none;
}
a:hover {
	text-decoration: underline;
}
a > small {
	font-size: 12px;
}
em {
	font-style: italic;
}
strong {
	font-weight: 700;
}
ul > li {
	list-style: inside;
	padding-left: 25px;
}
li {
	list-style: decimal inside;
	padding-left: 20px;
}
blockquote {
	margin: 0;
	padding: 0 0 0 20px;
	font-style: italic;
}
hr {
	border: 0;
	background: #CCCCCC;
	height: 1px;
	margin: 0 0 24px;
}
sub {
	vertical-align: sub;
	font-size: smaller;
}
.quote {
	font-style: italic;
}
.alignBottom {
	position: fixed;
	bottom: 10px;
}

li > p {
	display: inline;
}

/****** search box ************/
.searchInput {
	width:40%;
	float: right;
	font-size: 16px;
	margin: 25px 0 10px 0;	
	font-weight: normal;
	border-radius: 3px;
	
	height:15px;
	padding: 4px 4px 4px 5px;
}

.searchInput:focus {
	border: 1px solid black;
	background: #FFFFFF;
	rgb(175, 0, 17)
	border-color: rgba(175, 0, 17, 0.8);
	outline: 0;
	outline: thin dotted \9;

	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(175, 0, 17,.75);
	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(175, 0, 17,.75);
	box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(175, 0, 17,.75);
}

/******************* Images ******************/
img {
	position: relative;
	margin: 0 auto;
	width: auto;
	height: auto;
	max-width: 650px;
	padding: 5px;
	margin: 10px 0 0 0;
	border: 1px solid #ccc;
}
img + figcaption {
	margin: 0 0 32px 0;
	font-style:italic;
}
img.wp-smiley {
	border: 0;
	margin: 0;
	padding: 0;
}

/*********** Code blocks ************************/
/* TODO provide minimal code styling, defer to plugin for full styling  */
code, pre {
	font-family: Monaco, Terminal, monospace;
	color: #000;
	font-size: 14px;
	word-break: break-all;
	/* IE hack to 'gain layout' and apply word-break */
	float: left;
}
pre {
	padding: 4px 12px;
	background: #FDFEFB;
	border-radius: 4px;
	border: 1px solid #D7D8C8;
	overflow: auto;
	
	margin-bottom: 32px;
	width: 640px;
}
.minified {
	font-size: 12px;
	word-break: break-all;
}
/* psuedo code */
.pseudoDeclaration {
	font-weight: bold;
}
.pseudoCodeIndent1 {
	padding-left: 2em;
}
.var {
	font-style: italic;
	font-weight: bold;
}
.function {
	font-weight: bold;
	font-style: normal;
}

/***************** Tables *********************/
table {
	width: 100%;
	border: 1px solid #CCCCCC;
	margin-bottom: 32px;
	text-align: left;
}
table > caption {
	font-style:italic;
}
th {
	font-family: 'Arvo', Helvetica, Arial, sans-serif;
	font-weight: normal;
}
/* Data Tables */
.dataTable th {
	font-size: 14px;
	padding: 5px;
	background: #F0F0F0;
}
.dataTable td {
	padding: 5px;
	background: #EDEDED;
}
.dataTable tbody {
	border: 1px solid #FF0000;
}

/* Big Loud Tables */
.bigTable th {
	font-size: 16px;
	padding: 10px;
	background: #232323;
	color: #FDFEFB;
}
.bigTable td {
	padding: 10px;
	background: #ccc;
}
/****** Comments **************/
.comment-reply-link {
	font-size:12px;
}
.form-allowed-tags > code {
	font-size:10px;
}
#cancel-comment-reply-link {
	font-size:12px; 
}
.commentNav {
	font-size: 12px;
}

#commentform input[type=text], #commentform textarea {
	font-size: 16px;
	font-weight: normal;
	border-radius: 3px;
}
#commentform input[type=text] {
	
	height:12px;
	padding: 4px 4px 4px 5px;
}
#commentform textarea {
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}
label[for=comment] {
	display:block;
}
#commentform input[type=text]:focus,
#commentform textarea:focus {
	border: 1px solid black;
	background: #FFFFFF;
	rgb(175, 0, 17)
	border-color: rgba(175, 0, 17, 0.8);
	outline: 0;
	outline: thin dotted \9;

	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(175, 0, 17,.75);
	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(175, 0, 17,.75);
	box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(175, 0, 17,.75);
}
#submit {
	background: #FBFAF7;
	color: #232323;
	border-radius: 4px;
}

/******* Posts ************/
.postNav {
	font-size: 12px;
}

.sticky {
	padding: 0 0 10px 10px;
	border-width: 0 0 3px 3px;
	border-style: solid;
	border-color: #CCCCCC;
}

/******* banner to inform IE users to upgrade ***********/
.chromeframe {
	margin: 0.2em 0;
	background: #CCCCCC;
	color: #000000;
	padding: 0.2em 0;
}

/************************* Media Queries ******************************/

/* TODO find optimal footer cut-off height for all navigation button counts */
 
/* regular width, but really short window: fix footer overlapping header */
@media screen and (max-height: 480px) and (min-width: 960px) {
	
	footer.fiveNavButtons {
		display: none;
	}
}
@media screen and (max-height: 390px) and (min-width: 960px) {

	footer.threeNavButtons {
		display: none;
	}
}

/* classic computer screen size (1024x768) and old iphones: */
/* header at the top, footer at the bottom, content in between */
@media screen and (max-width: 960px) {
	
	.wrapper {
		width: auto;
		margin: 0;
	}

	.masterHeader, 
	#main, 
	footer {
		float: none;
		position: static;
		width: auto;
	}

	.masterHeader {
		padding-right: 320px;
		margin-top: 0;
	}
	
	/* TODO determine optimal minimum height for .masterHeader for other button counts */
	.masterHeader.threeNavButtons {
		min-height: 115px;
	}
	.masterHeader.fiveNavButtons {
		min-height: 200px;
	}

	#main {
		padding: 20px 84px 20px 50px;
		margin: 0 0 20px;
	}

	footer {
		border-top: 1px solid #ccc;
		margin: 0 84px 0 50px;
		padding: 0;
	}
	
	.masterHeader > nav > ul {
		position: absolute;
		right: 130px;
		top: 44px;
	}
}

@media screen and (max-width: 720px) {

	/* TODO not working in Firefox, IE, Android */
	.mainSearch .searchInput {
		width: 96%;
		float: left;
		display: block;
	}
}

/* small and medium phones: use vertical layout */
@media screen and (max-width: 550px) {
	
	.masterHeader {
		padding: 10px 20px 0;
		margin-right: 0;
		margin-top: 0;
	}

	#main {
		padding: 10px 0 10px 20px;
		margin: 0 0 30px;
	}

	.masterHeader > nav > ul {
		position: static;
	}

	footer {
		margin: 0 0 0 30px;
	}
}

/* for PrintPreview and actual paper prints */
@media print {
	
	body {
		color: #000000 !important;
		background-color: #FFFFFF !important;
		border: 0 !important;
		margin: 0 !important;
		padding: 0 !important;
	}
	.masterHeader, footer {
		display: none;
	}
}

